More module-info work